--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -412,9 +412,9 @@ body {
 }
 
 .box {
-    border-left: 1px solid var(--c-border);
+   /* border-left: 1px solid var(--c-border);
     border-right: 1px solid var(--c-border);
-    border-bottom: 1px solid var(--c-border);
+    border-bottom: 1px solid var(--c-border);*/
     width: 60%;
     position: absolute;
     top: 0px;
@@ -1548,7 +1548,7 @@ summary {
     padding: 8px;
     z-index: 90;
     font-family: var(--font-family-mono);
-    color: var(--c-btn-bg);
+    color: var(--c-topper-split-bg);
     cursor: pointer;
     font-weight: 400;
 }
