--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -864,7 +864,7 @@ cite a {
 
  ol>li::before {
 	position: absolute;
-    top: -0.01em;
+    top: 0em;
     left: 0;
     font-family: var(--font-family-serif),system-ui,sans-serif;
     font-size: 1.4;
@@ -1493,7 +1493,7 @@ summary {
 }
 
 .menu-item:nth-of-type(1) {
-    padding-left: 20px !important;
+    padding-left: 10px !important;
     border-left: 1px solid var(--c-border);
 }
 
@@ -1599,6 +1599,9 @@ summary {
       margin-left: auto;
       font-family: var(--font-family-mono);
       padding: 10px 20px;
+      border-right: 1px solid var(--c-border);
+      border-bottom: 1px solid var(--c-border);
+      border-top: 1px solid var(--c-border);
 }
 
 #theme-toggle:hover {
