--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1411,7 +1411,7 @@ summary {
 .site-heading-ltr {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-around;
    margin-bottom: -1rem;
 }
@@ -1553,6 +1553,8 @@ summary {
     float: left;
     border-top: 1px solid var(--c-border);
     border-bottom: 1px solid var(--c-border);
+    padding: 5px;
+    margin-bottom: 1.3rem;
 }
 
 .menu-right {
@@ -1565,7 +1567,6 @@ summary {
 
 .menu-item:nth-of-type(1) {
     padding-left: 10px !important;
-    border-left: 1px solid var(--c-border);
 }
 
 .menu-item {
@@ -1573,7 +1574,6 @@ summary {
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    border-right: 1px solid var(--c-border);
     vertical-align: middle;
     padding: 8px 4.9px;
     @media(min-width: 500px) {
@@ -2069,23 +2069,21 @@ a.button-block {
     box-sizing: border-box;
     width: 100%;
     height: 40px;
-    border-left: 1px solid var(--c-border);
-    border-right: 1px solid var(--c-border);
-    border-bottom: 1px solid var(--c-border);
-    border-top: 0px;
-    font-family: var(--font-family-mono) !important;
+    border: 1px solid var(--c-border);
+    font-family: var(--font-family-serif) !important;
     color: var(--c-text);
     font-size: var(--font-size-medium);
     background-color: var(--c-card-bg-light);
     /*margin-top: 1em;*/
     padding: 0 1.25em;
     /*margin-left: 25px;*/
+    border-radius: 1000px;
 }
 
 ::placeholder {
     color: var(--c-text-muted);
     font-size: 1rem;
-    font-family:  var(--font-family-mono) !important;
+    font-family:  var(--font-family-serif) !important;
 }
 .search-icon {
     position: absolute;
