--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2225,918 +2225,4 @@ a.button-block {
 .search-result-doc .search-result-icon {
     width: 1rem;
     height: 1rem;
-    margin-right: 0.5rem;
-    color: #7253ed;
-    flex-shrink: 0;
-}
-
-.search-result-doc .search-result-doc-title {
-    padding-left: 0.1rem;
-    overflow: auto;
-}
-
-.search-result-section {
-    margin-left: 1.5rem;
-    word-wrap: break-word;
-}
-
-.search-result-previews {
-    display: block;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 1rem;
-    margin-left: 0.5rem;
-    word-wrap: break-word;
-    border-left: 1px solid;
-    border-left-color: var(--secondary-border-color);
-    font-size: 11px !important;
-}
-
-.search-result-preview span {
-    color: var(--tertiary-text-color) !important;
-}
-
-.search-result-preview + .search-result-preview {
-    margin-top: 0.25rem;
-}
-
-.search-result-highlight {
-    font-weight: bold;
-}
-
-.search-no-result {
-    padding-top: 0.5rem;
-    padding-right: 0.75rem;
-    padding-bottom: 0.5rem;
-    padding-left: 0.75rem;
-    font-family: var(--primary-font-family) !important;
-    color: var(--primary-text-color) !important;
-}
-
-
-.search-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    width: 0;
-    height: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-    opacity: 0;
-    transition: opacity ease 400ms, width 0s 400ms, height 0s 400ms;
-}
-
-.search-active .search {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-}
-
-.search-active .search-input-wrap {
-    height: 4rem;
-    border-radius: 0;
-}
-
-.search-active .search-results {
-    display: block;
-}
-
-.search-active .search-overlay {
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    transition: opacity ease 400ms, width 0s, height 0s;
-}
-
-.back-icon {
-    background-color: var(--quinary-bg-color);
-    fill: currentColor;
-    color: var(--primary-text-color);
-    margin-top: 5px;
-    padding-left: 5px;
-    fill: currentColor;
-    cursor: pointer;
-}
-
-.back-icon,
-.back-p {
-    vertical-align: middle;
-    display: inline-block;
-}
-
-.back-p {
-    color: var(--primary-text-color);
-    text-decoration: none;
-    cursor: pointer;
-    font-weight: 600;
-}
-
-
-.feed-title-excerpt-block {
-    width: 100%;
-    cursor: pointer;
-    border: 1px solid var(--c-border);
-
-    background-color: var(--c-topper-split-bg);
-    margin: 2rem 0;
-    padding-bottom: 1rem;
-}
-
-.feed-title-excerpt-block:hover {
-    /*background-color: var(--secondary-bg-color);*/
-}
-
-.srccode {
-    position: absolute;
-    right: 10px;
-}
-
-.srccode:hover > a > i {
-    font-weight: 600;
-}
-
-.feed-title {
-    color: var(--c-text-strong);
-    margin-left: 20px;
-    margin-right: 50px;
-    font-family:  var(--font-family-serif);
-    font-weight: var(--font-weight-bold);
-    letter-spacing: var(--letter-spacing-tight);
-    font-size: 25px;
-    line-height: 1;
-    border-bottom: 1px solid var(--c-card-text);
-    padding-bottom: 1rem;
-
-    @media(min-width: 300px)and (max-width:1499px) {
-      font-size: calc(25px + (45 - 25) * ( 100vw - 300px) / ( 1500 - 300))
-    }
-
-    @media(min-width: 1500px) {
-      font-size: 49px;
-    }
-}
-
-.feed-title:hover {
-   /* text-decoration: underline;*/
-}
-
-.feed-excerpt{
-    color: var(--primary-text-color);
-    margin-top: -12px;
-    margin-left: 20px !important;
-    margin-right: 30px;
-    font-family:  var(--font-family-sans);
-    font-size: 15px;
-}
-
-.tags {
-    list-style: none;
-  /*  padding-top: 18px;
-    padding-bottom: 18px;
-    position: relative;*/
-    overflow: hidden;
-    padding: 10px;
-    margin-top:2rem;
-    margin-bottom: 9px;
-    display: block;
-
-    @media(min-width: 600px) {
-    	.tags{
-    		margin-top: 24px
-    	}
-    }
-
-    @media(min-width: 1070px) {
-    	.tags{
-    		margin-top: 24px
-    	}
-    }
-    /*background-color: var(--c-card-bg-light);
-    padding: 10px;
-    border: 1px solid car(--c-card-border-light);
-    color: var(--c-card-text) !important;*/
-}
-
-/*
-@media(min-width: 600px) {
-	.tags{
-		padding-top: 15px
-	}
-}
-
-@media(min-width: 1070px) {
-	.tags{
-		padding-top: 26px
-	}
-} */
-
-@media(min-width: 600px) {
-	.tags{
-		margin-top: 24px
-	}
-}
-
-@media(min-width: 1070px) {
-	.tags{
-		margin-top: 15px
-	}
-}
-
-
-.tags li {
-    float: left;
-    margin:0;
-    padding:0;
-    line-height:1.4;
-   /*line-height: var(--line-height-tight);*/
-   border: 1px solid var(--c-border);
-}
-
-/*
-.tags li::before {
-  top: 0.65em;
-left: 0;
-height: 6px;
-width: 6px;
-background-color: var(--c-accent);
-border-radius: 50%;
-content: "";
-position: absolute;
-}
-*/
-
-
-
-.tag {
-    color: var(--green);
-    text-decoration: none;
-    display: inline-block;
-    padding: 0 12px;
-    border-radius: 0;
-    height: auto;
-    vertical-align: middle;
-    font-family: var(--font-family-mono);
-    font-weight: normal !important;
-    font-size: var(--font-size-small);
-    margin-right: 7px;
-}
-
-.status {
-    color: var(--c-card);
-    text-decoration: none;
-    display: inline-block;
-    padding: 0px 10px !important;
-    border-radius: 0px !important;
-    height: auto;
-    vertical-align: middle;
-    font-family: var(--font-family-mono);
-    font-weight: normal !important;
-    font-size: var(--font-size-small);
-    margin-bottom: 0;
-    background-color: var(--c-card-bg-light);
-    border: 1px solid var(--c-border);
-        line-height: 1.5rem !important;
-}
-
-.status {
-  & b {
-    border-right: 1px solid var(--c-border);
-    /*background-color: var(--c-text);
-    color: var(--c-bg);*/
-    height: 100%;
-      }
-}
-
-.status::before {
-  width: 0;
-  height: 0;
-}
-
-.readtime {
-    color: var(--c-text);
-    text-decoration: none;
-    display: inline-block;
-    padding: 0 12px;
-    border-radius: 0;
-    height: auto;
-    vertical-align: middle;
-    font-family: var(--font-family-mono);
-    font-weight: normal !important;
-    font-size: var(--font-size-small);
-    margin: 0;
-}
-
-.content {
-  line-height: 20px;
-  margin-top: 5rem;
-}
-
-.content a {
-    color: var(--c-text-link);
-    text-decoration: underline;
-    /*background-image: linear-gradient(0deg,var(--lime) 40%,transparent 0);*/
-    font-weight: var(--font-weight-semibold);
-}
-
-.content a:hover {
-    text-decoration: none;
-    background-color: var(--lime);
-}
-
-.sn-right,
-.mn-right {
-    float: right;
-    clear: right;
-    font-family: var(--font-family-mono) !important;
-    font-size: 14px;
-    margin-right: -45%;
-    width: 40%;
-    margin-top: 0;
-    margin-bottom: 0;
-    vertical-align: baseline;
-    position: relative;
-    padding-bottom: 5px;
-}
-
-.sn-left,
-.mn-left {
-    float: left;
-    clear: left;
-    font-family:  var(--font-family-mono) !important;
-    font-size: 14px;
-    margin-left: -45%;
-    width: 40%;
-    margin-top: 0;
-    margin-bottom: 0;
-    vertical-align: baseline;
-    position: relative;
-    padding-bottom: 5px;
-}
-
-.sidenote-number {
-    counter-increment: sidenote-counter;
-}
-
-.sidenote-number:after,
-.sn-left:before,
-.sn-right:before {
-    font-family:  var(--secondary-font-family) !important;
-    position: relative;
-    vertical-align: baseline;
-}
-
-.sidenote-number:after {
-    content: counter(sidenote-counter);
-    font-size: 12px;
-    top: -0.5rem;
-    left: 0.1rem;
-}
-
-.sn-right:before,
-.sn-left:before {
-    content: counter(sidenote-counter) " ";
-    font-size: 14px;
-    top: -0.5rem;
-}
-
-blockquote .sn-left,
-blockquote .mn-left {
-    float: left;
-    clear: left;
-    margin-left: -58%;
-    width: 40%;
-    text-align: left;
-}
-
-li .sn-left,
-li .mn-left {
-    float: left;
-    clear: left;
-    margin-left: -53%;
-    width: 40%;
-    text-align: left;
-}
-
-blockquote .sn-right,
-blockquote .mn-right {
-    float: right;
-    clear: right;
-    margin-right: -59% !important;
-    width: 40%;
-    text-align: left;
-}
-
-
-li .sn-right,
-li .mn-right {
-    float: right;
-    clear: right;
-    margin-right: -49% !important;
-    width: 40%;
-    text-align: left;
-}
-
-
-.tooltip {
-    display:inline;
-    position:relative;
-    text-align:left;
-}
-
-
-.tooltip bottom {
-    display: none;
-}
-
-.tooltip .right {
-    min-width:300px;
-    top:50%;
-    left:100%;
-    margin-left:20px;
-    transform:translate(0, -50%);
-    padding:10px 20px;
-    color: var(--primary-text-color);
-    background-color:var(--primary-bg-color);
-    font-weight:normal;
-    font-size:13px;
-    border-radius:8px;
-    position:absolute;
-    z-index:99999999;
-    box-sizing:border-box;
-    box-shadow:0 1px 8px var(--primary-box-shadow-color);
-    display:none;
-}
-
-.tooltip:hover .right {
-    display:block;
-}
-
-.tooltip .right i {
-    position:absolute;
-    top:50%;
-    right:100%;
-    margin-top:-12px;
-    width:12px;
-    height:24px;
-    overflow:hidden;
-}
-
-.tooltip .right i::after {
-    content:'';
-    position:absolute;
-    width:12px;
-    height:12px;
-    left:0;
-    top:50%;
-    transform:translate(50%,-50%) rotate(-45deg);
-    background-color: var(--primary-bg-color);
-    box-shadow:0 1px 8px var(--primary-box-shadow-color);
-}
-
-.right .tooltip-title {
-    font-size: 14px;
-    font-weight: 600;
-    display: inline-block;
-}
-
-.right .tooltip-excerpt {
-    font-size: 12px;
-    display: inline-block;
-}
-
-.right .tooltip-excerpt a {
-    font-size: 12px;
-}
-
-input.margin-toggle {
-    display: none;
-}
-
-.srs-svg {
-    stroke: var(--primary-text-color);
-}
-
-label.sidenote-number {
-    display: inline;
-}
-
-label.margin-toggle:not(.sidenote-number) {
-    display: none;
-}
-
-.spaced-rep {
-    display: none;
-}
-
-input.srs-toggle {
-    display: none;
-}
-
-label.srs-toggle {
-    display: inline;
-    cursor: pointer;
-}
-
-.srs-toggle:checked + .spaced-rep{
-    display: block !important;
-    left: 1rem;
-    clear: both;
-    margin: 1rem 2.5%;
-    vertical-align: baseline;
-    position: relative;
-    padding: 12px;
-    width: 240px;
-    background-color: var(--primary-bg-color);
-    border: solid 1px var(--ternary-border-color);
-    border-radius: 5px;
-    box-shadow: 1px 1px 15px var(--gray-500);
-    word-wrap:break-word;
-}
-
-.related {
-    background-color:var(--secondary-bg-color);
-    width: 100%;
-    min-height: 100px;
-    border-radius: 10px;
-}
-
-.related h4 {
-    color: var(--secondary-text-color);
-    padding-top: 20px;
-    padding-left: 20px
-}
-
-.related-wrapper {
-    column-count: 2 !important;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-}
-
-.related-group {
-    background-color: var(--quaternary-bg-color) !important;
-    margin-left: 10px;
-    width: 90% !important;
-    height: 100%;
-    border: 1px solid var(--lime);
-    cursor: pointer;
-    border-radius: 0;
-}
-
-.related-group:hover {
-    background-color: var(--quaternary-bg-color) !important;
-    border: 2px solid var(--lime);
-    text-decoration: underline;
-}
-
-.related-group:active {
-    border: 2px dashed var(--lime);
-}
-
-.related-group a {
-    text-decoration: none;
-}
-
-.related-title {
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 12px !important;
-    font-family:  var(--primary-font-family) !important;
-    font-weight: 600;
-}
-
-.related-title:hover {
-    font-decoration: underline;
-}
-
-.related-excerpt:before {
-    content: "\"";
-}
-
-
-.related-excerpt:after {
-    content: "\"";
-}
-
-.related-excerpt {
-    color: var(--primary-text-color) !important;
-    padding-left: 10px;
-    padding-right: 5px;
-    font-size: 12px !important;
-   font-family: var(--font-family-sans);
-}
-
-.scroll-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    border-radius: 30px;
-    background-color: transparent;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    color: var(--c-text);
-    outline: none;
-    border: none;
-    overflow: hidden;
-    font-size: 18px;
-}
-
-.context-menu-res {
-    display: none;
-    position: absolute;
-    z-index: 10;
-    padding: 12px 0;
-    width: 240px;
-    background-color: var(--primary-bg-color);
-    border: solid 1px var(--ternary-border-color);
-    border-radius: 5px;
-    box-shadow: 1px 1px 15px var(--secondary-box-shadow-color);
-}
-
-.context-menu-res li {
-    line-height: 0.8rem;
-    padding-left: 0.2rem;
-    padding-top: 0.3rem;
-    padding-bottom: 0.3rem;
-}
-
-.context-menu-res--active {
-    display: block;
-}
-
-.context-menu-res li:hover {
-    color: var(--primary-text-color);
-    background-color: var(--secondary-bg-color);
-}
-
-.context-menu-res li:hover >  .context-menu-res__link {
-    font-weight: bold;
-}
-
-.context-menu-res__link {
-    color: var(--primary-text-color);
-    text-decoration: none;
-}
-
-
-
-/* context-menu styling */
-.context-menu {
-    display: none;
-    position: absolute;
-    z-index: 10;
-    padding: 12px 0;
-    width: 177px;
-    border: solid 1px var(--ternary-border-color);
-    border-radius: 5px;
-    box-shadow: 1px 1px 15px var(--secondary-box-shadow-color);
-    background-color: var(--gray-500);
-    color: var(--white);
-  }
-
-.context-menu--active {
-  display: block;
-}
-
-.context-menu__items {
-  list-style: none;
-  margin: 0;
-  padding-left: 6px;
-  padding-right: 6px;
-}
-
-.context-menu__item {
-  display: block;
-  margin-bottom: 4px;
-}
-
-.context-menu__item:last-child {
-  margin-bottom: 0;
-}
-
-.context-menu__link {
-  display: block;
-  padding: 4px 12px;
-  color: var(--primary-text-color);
-  text-decoration: none;
-  font-size: 12px;
-  font-family: var(--primary-font-family) !important;
-}
-
-.context-menu__link:hover {
-  color: var(--primary-text-color);
-  background-color: var(--secondary-bg-color);
-  text-decoration: underline;
-}
-
-.popup {
- position: absolute;
- display: none;
-}
-
-#copyright {
-    margin-left: 20px;
-}
-
-#copyright-notice {
-    font-size: 0.7rem;
-    font-weight: 400;
-    font-family: var(--font-family-mono);
-}
-
-#disqus_thread {
-    margin-left: 20px;
-    margin-right: 10px;
-}
-
-@media screen and (max-width: 1200px){
-    .sn-right,
-    .mn-right {
-        margin-right: -35%;
-        width: 30%;
-    }
-
-    .sn-left,
-    .mn-left {
-        margin-left: -35%;
-        width: 30%;
-    }
-
-    blockquote .sn-left,
-    blockquote .mn-left {
-        margin-left: -51% !important;
-        width: 30% !important;
-    }
-
-    li .sn-left,
-    li .mn-left {
-    margin-left: -43% !important;
-    width: 30% !important;
-    }
-
-    blockquote .sn-right,
-    blockquote .mn-right {
-        margin-right: -56% !important;
-        width: 30% !important;
-    }
-
-    li .sn-right,
-    li .mn-right {
-    margin-right: -41% !important;
-    width: 30% !important;
-    }
-
-.related-group {
-    background-color:  var(--quaternary-bg-color) !important;
-    margin-left: 10px;
-    width: 90% !important;
-    height: 100%;
-    border-radius: 10px;
-    cursor: pointer;
-}
-}
-
-@media screen and (max-width: 1024px) {
-    .tooltip .right {
-        display: none;
-    }
-
-    .tooltip .bottom {
-        min-width:300px;
-        top:40px;
-        left:50%;
-        transform:translate(-50%, 0);
-        padding:10px 20px;
-        color:var(--primary-text-color);
-        background-color:var(--primary-bg-color);
-        font-weight:normal;
-        font-size:13px;
-        border-radius:8px;
-        position:absolute;
-        z-index:99999999;
-        box-sizing:border-box;
-        box-shadow:0 1px 8px var(--primary-box-shadow-color);
-        display:none;
-    }
-
-    .tooltip:hover .bottom {
-        display:block;
-    }
-
-    .tooltip .bottom i {
-        position:absolute;
-        bottom:100%;
-        left:50%;
-        margin-left:-12px;
-        width:24px;
-        height:12px;
-        overflow:hidden;
-    }
-
-    .tooltip .bottom i::after {
-        content:'';
-        position:absolute;
-        width:12px;
-        height:12px;
-        left:50%;
-        transform:translate(-50%,50%) rotate(45deg);
-        background-color: var(--primary-bg-color);
-        box-shadow:0 1px 8px var(--primary-box-shadow-color);
-    }
-
-    .bottom .tooltip-title {
-        font-size: 14px;
-        font-weight: 500;
-        display: inline-block;
-    }
-
-    .bottom .tooltip-excerpt {
-        font-size: 12px;
-        display: inline-block;
-       background-color: var(--background-color-base);
-    }
-
-    .bottom .tooltip-excerpt a {
-        font-size: 12px;
-       background-color: var(--background-color-base);
-    }
-}
-
-/* smartphones, touchscreens */
-@media (pointer: coarse) {
-  .tooltip:hover .bottom, .tooltip:hover .right {
-      display: none;
-  }
-  .feed-context {
-      padding: 2px 10px 0px 10px;
-      height: 70px;
-      right: 0px;
-      margin-top: 15px;
-  }
-  .search-shortcut {
-      display: none;
-  }
-}
-
-
-
-@media screen and (max-width: 800px){
-
-.box {
-    width: 80%;
-}
-
-label {
-    cursor: pointer;
-}
-
-label.margin-toggle:not(.sidenote-number) {
-    display: inline;
-}
-
-.sn-left, .sn-right,
-.mn-left, .mn-right {
-    display: none;
-}
-
-.margin-toggle:checked + .sn-right,
-.margin-toggle:checked + .sn-left,
-.margin-toggle:checked + .mn-left,
-.margin-toggle:checked + .mn-right {
-    display: block;
-    float: left;
-    left: 1rem;
-    clear: both;
-    width: 95%;
-    margin: 1rem 2.5%;
-    vertical-align: baseline;
-    position: relative;
-}
-
-.sketch-left, .sketch-right {
-    display: inline-block !important;
-    float: left !important;
-    left: 1rem !important;
-    clear: both !important;
-    width: 95% !important;
-    margin: 1rem 2.5% !important;
-    vertical-align: baseline !important;
-    position: relative !important;
-    padding-bottom: 10px;
-}
-}
-
-@media screen and (max-width: 500px){
-.box {
-  width: 100%;
-  max-width: 100% !important;
-  border-left: none !important;
-  border-right: none !important;
-}
-.related-wrapper {
-  grid-template-columns: repeat(1, 1fr);
-}
-}
+    margin-
