fixing media q for mag

--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -193,9 +193,9 @@
             {%- endif -%}
             <label for="search-input"></label>
             <input type="text" id="search-input" autocomplete="off" placeholder="Search"/>
-            <div class="search-icon">
-                🔍
-            </div>
+            <div style="position: relative;">
+                <p class="search-icon">🔎</p>
+              </div>
             <div id="search-results" class="search-results"></div>
         </div>
         <script type="text/javascript" src="/assets/js/vendor/lunr.min.js"></script>
