--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -882,7 +882,7 @@ cite a {
 	left: 0;
 	height: 6px;
 	width: 6px;
-	/*background-color: var(--c-accent);*/
+	background-color: var(--c-accent);
 	border-radius: 50%;
 	content: "";
 	position: absolute
@@ -896,7 +896,7 @@ cite a {
 }
 
  ul ul li::before {
-	background: transparent;
+	background-color: var(--c-accent);
 	border: 1px solid var(--c-accent)
 }
 
@@ -905,7 +905,7 @@ cite a {
 }
 
  ul ul ul ul li::before {
-	background: transparent;
+	background: var(--c-accent);
 	border: 1px solid var(--c-accent)
 }
 
@@ -914,7 +914,7 @@ cite a {
 }
 
  ul ul ul ul ul ul li::before {
-	background: transparent;
+	background: var(--c-accent);
 	border: 1px solid var(--c-accent)
 }
 
