--- a/_includes/Content.html
+++ b/_includes/Content.html
@@ -3,10 +3,10 @@
 
 <ul class="tags">
     {%- if page.status != nil and page.status != empty -%}
-    <div><p class="readtime">{%- include read_time.html -%}</p></div>
+    <div><p class="readtime">⏳ {%- include read_time.html -%}</p></div>
     <div><a href="javascript:void(0)" class="tag"><b>Status:</b> <i>{{page.status | capitalize}}</i></a></div>
     {%- endif -%}
-    <div><a href="/dates/#{{ page.date | date: '%d-%B-%Y' }}" class="tag">Last updated on {{ page.date | date: '%B-%d-%Y' }}</a></div>
+    <div><a href="/dates/#{{ page.date | date: '%d-%B-%Y' }}" class="tag">📅 Last updated on {{ page.date | date: '%B-%d-%Y' }}</a></div>
     <!-- Loop through page categories and print them in tags -->
     {%- for tag in page.tags -%}
         {%- if tag == 'Favorite' -%}
