metadata to serif

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2481,7 +2481,7 @@ position: absolute;
     border-radius: 0;
     height: auto;
     vertical-align: middle;
-    font-family: var(--font-family-mono);
+    font-family: var(--font-family-serif);
     font-weight: normal !important;
     font-size: var(--font-size-small);
     margin-right: 7px;
@@ -2526,7 +2526,7 @@ position: absolute;
     border-radius: 0;
     height: auto;
     vertical-align: middle;
-    font-family: var(--font-family-mono);
+    font-family: var(--font-family-serif);
     font-weight: normal !important;
     font-size: var(--font-size-small);
     margin: 0;
