--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -77,6 +77,7 @@ layout: Stylesheet
   font-weight: 700;
   font-style: normal;
 }
+/*
 
 @font-face {
    font-family: 'pitch sans';
@@ -101,6 +102,7 @@ layout: Stylesheet
    font-style: normal;
    font-display: swap;
 }
+
 
 @font-face {
    font-family: 'untitled';
@@ -216,7 +218,7 @@ layout: Stylesheet
    font-display: swap;
 }
 
-
+*/
 
 /*
 
@@ -2555,6 +2557,21 @@ position: absolute;
     -webkit-box-pack: justify;
     /*-ms-flex-pack: justify;*/
     justify-content: space-between;
+}
+
+.article-meta__item-label {
+    font-family: var(--font-family-sans);
+    font-size: 14px;
+    line-height: 1.5;
+    font-weight: 700;
+}
+
+.article-meta__item-value {
+    font-family: var(--font-family-sans);
+    font-size: 14px;
+    line-height: 1.5;
+    font-weight: 700;
+    font-weight: 400;
 }
 
 
