updated metadata border colors

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2540,7 +2540,7 @@ position: absolute;
     list-style-type: none;
     margin-top: 0;
     padding-left: 0;
-    border-top: 1px dotted #3c3830;
+    border-top: 1px dotted var(--c-card-border);
     width: 100%;
 }
 
@@ -2550,7 +2550,7 @@ position: absolute;
     -webkit-box-align: center;
     /*-ms-flex-align: center;*/
     align-items: center;
-    border-bottom: 1px solid rgba(60,56,48,.1);
+    border-bottom: 1px solid var(--c-border-light);
     /*display: -webkit-box;
     display: -ms-flexbox;*/
     display: flex;
