--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2705,7 +2705,7 @@ li .mn-right {
     transform:translate(0, -50%);
     padding:10px 20px;
     color: var(--primary-text-color);
-    background-color:var(--primary-bg-color);
+    background-color:var(--c-btn-alt-bg);
     font-weight:normal;
     font-size:13px;
     border-radius:8px;
